[package]
name = "dcsrvrs"
version = "0.1.0"
edition = "2021"
default-run = "dcsrvrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration", "bench"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
log = "*"
path-clean = "*"
tempfile = "*"
serde = { version = "*", features = ["derive"] }
chrono = "*"
tokio = { version = "1.20", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "signal",
] }
tracing = "*"
tracing-subscriber = "*"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
axum = { version = "0.6.20", features = ["headers"] }
clap = { version = "4.3.21", features = ["derive"] }
tower-http = { version = "0.4.3", features = ["cors"] }
futures-util = "0.3.28"
tokio-util = { version = "0.7.8", features = ["io"] }
anyhow = "1.0.72"
bincode = "1.3.3"

[dependencies.sea-orm]
version = "^0"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[profile.release]
strip = true
