[package]
name = "dcsrvrs"
version = "0.1.0"
edition = "2021"
default-run = "dcsrvrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration", "bench"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
log = "*"
path-clean = "*"
tempfile = "*"
serde = { version = "*", features = ["derive"] }
chrono = "*"
tokio = { version = "1.20", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "signal",
] }
tracing = "*"
tracing-subscriber = "*"
sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite"] }
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
clap = { version = "4.3.21", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
futures-util = "0.3.28"
tokio-util = { version = "0.7.8", features = ["io"] }
anyhow = "1.0.72"
bincode = "1.3.3"
derivative = "2.2.0"
uuid = { version = "^1", features = ["v4", "fast-rng"] }
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

[workspace.dependencies]
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

[profile.release]
strip = true
