[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "io-util", "signal", "time"] }
clap = { version = "4.3.21", features = ["derive"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
anyhow = "1.0.72"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
hyper = { version = "0.14.27", features = ["full"] }
rand = "0.8.5"
url = "2.4.0"
sha256 = "1.3.0"
